--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/khorche/comp229/issues"
   },
-  "homepage": "https://github.com/khorche/comp229#readme"
+  "homepage": "https://github.com/khorche/comp229#readme",
+  "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.2"
+  }
 }
