--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   "homepage": "https://github.com/khorche/comp229#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
+    "env": "^0.0.2",
     "express": "^4.18.2",
+    "find-config": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "validator": "^13.7.0"
